--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,56 +8,13 @@ body {
 .side-menu {
     height: 100%;
     width: 250px;
-<<<<<<< HEAD
+    overflow-x: hidden;
+    overflow-y: hidden;
+    transition: width .5s;
+    z-index: 998;
+    float: left;
+    border-right: 1px solid #eeeeee;
 }
-
-#page-content-wrapper {
-    width: 100%;
-    position: absolute;
-    padding: 30px 15px 15px;
-}
-
-#wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
-}
-
-@media (min-width: 768px) {
-    #wrapper {
-        padding-left: 250px;
-    }
-
-    #wrapper.toggled {
-        padding-left: 0;
-    }
-
-    #sidebar-wrapper {
-        width: 250px;
-    }
-
-    #wrapper.toggled #sidebar-wrapper {
-        width: 0;
-    }
-
-    #page-content-wrapper {
-        padding: 20px;
-        padding-top: 30px;
-        position: relative;
-    }
-
-    #wrapper.toggled #page-content-wrapper {
-        position: relative;
-        margin-right: 0;
-    }
-}
-
-.header {
-    background-color: #342E2B;
-    color: white;
-    padding: 16px;
-    font-size: 1.5em;
-}
-
 
 .btn-primary{
     background-color: #153547;
