--- a/src/libs/card/style.css
+++ b/src/libs/card/style.css
@@ -4,7 +4,7 @@
     background-clip: padding-box;
     background-color: #fff;
     border: 1px solid #eeeeee;
-    margin: 10px;
+    margin: 5px;
     padding: 0;
     border-radius: 2px !important;
     overflow-y: hidden;
@@ -22,4 +22,9 @@
 
 .card-content {
     padding: 15px;
+}
+
+.card .row {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
