--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-    color: #342E2B;
+    color: #173646;
     overflow-y: hidden;
     overflow-x: hidden;
     background-color: #fcfcfd;
@@ -9,7 +9,7 @@ body {
 .side-menu {
     height: 100%;
     width: 290px;
-    padding-top: 5px;
+    padding-bottom: 10px;
     overflow-x: hidden;
     overflow-y: hidden;
     transition: width .5s;
@@ -19,7 +19,6 @@ body {
 
 .content {
     transition: .5s;
-    padding-top: 5px;
     margin-left: 290px;
     margin-right: 0;
     z-index: 0;
@@ -27,14 +26,16 @@ body {
 }
 
 .btn-primary {
-    background-color: #153547;
-    border-color: #152f3e;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    transition: width .5s;
-    z-index: 998;
+    background-color: #173646;
+    border-color: #173646;
+    transition: .3s;
     float: left;
-    border-right: 1px solid #eeeeee;
+}
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #2e4a58 !important;
+    border-color: #2e4a58 !important;
 }
 
 .SideMenu-wrapper {
@@ -49,4 +50,12 @@ body {
 .btn:focus {
     outline: 0px;
     outline-offset: -2px;
+}
+
+.form-control[disabled],
+.form-control[readonly],
+fieldset[disabled] .form-control {
+    background-color: #fcfcfd;
+    border: 1px solid #e7eaec;
+    opacity: 1;
 }
